# Streamlit-Chatbot

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CI_CD_SETUP.md  CLEANUP_SUMMARY.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  INTEGRATION_PLAN.md  LANGFUSE_FIX.md  LANGFUSE_MONITORING.md  MINIMAL_CICD_PROPOSAL.md  MONITORING.md  PRODUCTION_READY.md  README.md  TEST_SUITE_SUMMARY.md  app.py  backend.py  check_integration.py  coverage.xml  pyproject.toml  requirements.txt  test_langfuse_api.py  test_langfuse_connectivity.py  test_langfuse_io.py  test_monitor.py  verify_setup.py
.github/workflows/: ci.yml
demo_data/: demo_feedback.jsonl  demo_metrics.jsonl
metrics/: feedback.jsonl  requests.jsonl
monitoring/: alerts.py  dashboard.py
pages/: 2_Monitor.py
prompts/: system_prompt.txt
tests/: __init__.py  test_chat_integration.py  test_llm_wrapper.py  test_monitoring.py  test_observability.py  test_smoke.py
